fix overflow

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1492,16 +1492,22 @@ main {
     z-index: 1;
     padding: 18px 0;
     transition: background-color 0.5s;
-    min-width: 380px;
+    min-width: 370px;
+    overflow-x: hidden;
 
     &.is_scrolling {
         outline: rgb(11, 11, 11) solid 2px;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 6px 24px 10px
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 6px 24px 10px;
+
+        @media (max-width: 576px) {
+            top: 0;
+            width: 100%;
+            border-radius: 0;
+        }
     }
 
     @media (max-width: 576px) {
         width: 100%;
-        min-width: 380px;
         transform: none;
         left: 0;
         padding: 10px 0;
